--- a/nginx/conf.d-local/gnuboard.conf
+++ b/nginx/conf.d-local/gnuboard.conf
@@ -4,8 +4,8 @@ server {
 
         server_name <domain>;
 
-        root /var/www/web/gnuboard;
+        root /var/www/web/youngcart;
 
         include /etc/nginx/conf.d/basic;
-        include /etc/nginx/conf.d/gnuboard-rewrite;
+        include /etc/nginx/conf.d/youngcart-rewrite;
 }
