--- a/nginx/conf.d/gnuboard.conf
+++ b/nginx/conf.d/gnuboard.conf
@@ -25,8 +25,8 @@ server {
                 rewrite ^/(.*)$  https://<domain>/$1;
         }
 
-        root /var/www/web/gnuboard;
+        root /var/www/web/youngcart;
 
         include /etc/nginx/conf.d/basic;
-        include /etc/nginx/conf.d/gnuboard-rewrite;
+        include /etc/nginx/conf.d/youngcart-rewrite;
 }
